feature: add footer component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -53,6 +53,7 @@
 // Utilities
 @import "node_modules/bootstrap/scss/utilities/api";
 // scss-docs-end import-stack
+@import "./footer";
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     letter-spacing: $headings-letter-spacing;
