refactor: change max-width to min-width

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,13 +1,14 @@
 @mixin textAttritube(){
   font-size: 16px;
-  font-weight: 500;
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  font-weight: 400;
+  color: $neutral-40;
   color: $neutral-0;
-  @media (max-width: 767.99px) {
-    font-weight: 400;
-    color: $neutral-40;
+  @media (min-width: 768px) {
+    font-weight: 500;
+    color: $neutral-0;
   }
 }
 @mixin labelAttritube(){
@@ -20,9 +21,9 @@
 }
 .footer-wrapper {
   background-color: $background;
-  padding: 80px 0 120px 0;
-  @media(max-width: 767.99px) {
-    padding: 80px 0;
+  padding: 80px 0;
+  @media(min-width: 768px) {
+    padding: 80px 0 120px 0;
   }
   .footer {
     max-width: 1296px;
@@ -30,11 +31,11 @@
     padding: 0 20px;
     margin: 0 auto;
     color: $neutral-0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    @media (max-width: 767.99px) {
-      display: block;
+    display: block;
+    @media (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
     }
     .logo-area {
       & > img {
@@ -48,35 +49,37 @@
           margin-right: 16px;
         }
       }
-      @media (max-width: 767.99px) {
-        margin-bottom: 40px;
+      margin-bottom: 40px;
+      @media (min-width: 768px) {
+        margin-bottom: 0;
       }
     }
     .info-area {
       .info-group {
-        display: flex;
-        &:first-of-type {
-          margin-bottom: 40px;
-        }
-        @media (max-width: 767.99px) {
-          display: block;
+        display: block;
           &:first-of-type {
             margin-bottom: 16px;
+          }
+        @media (min-width: 768px) {
+          display: flex;
+          &:first-of-type {
+            margin-bottom: 40px;
           }
         }
       }
       .info-item {
         &:nth-of-type(odd) {
-          margin-right: 80px;
-          @media (max-width: 767.99px) {
-            margin-right: 0;
+          margin-right: 0;
+          @media (min-width: 768px) {
+            margin-right: 80px;
           }
         }
-        @media (max-width: 767.99px) {
-          margin-bottom: 16px;
-          &:last-of-type {
-            margin-bottom: 0;
-          }
+        margin-bottom: 16px;
+        &:last-of-type {
+          margin-bottom: 0;
+        }
+        @media (min-width: 768px) {
+          margin-bottom: 0;
         }
         
         p {
@@ -94,15 +97,17 @@
     .bottom-area {
       width: 100%;
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
       margin-top: 80px;
-      @media (max-width: 767.99px) {
-        flex-direction: column;
-        align-items: flex-start;
-        span:first-of-type {
-          margin-bottom: 16px;
-        }
+      span:first-of-type {
+        margin-bottom: 16px;
+      }
+      @media (min-width: 768px) {
+        flex-direction: row;
+        align-items: center;
+        
       }
       span {
         @include textAttritube();
