--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -55,6 +55,9 @@
 // scss-docs-end import-stack
 @import "./footer";
 
+// BookRoom
+@import "./book-room";
+
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     letter-spacing: $headings-letter-spacing;
 }
