fix: svg file not exist error

--- a/src/styles/bs-custom/_carousel.scss
+++ b/src/styles/bs-custom/_carousel.scss
@@ -1,12 +1,12 @@
 .carousel-control-prev-icon {
   background-color: white;
-  background-image: url('@/assets/svg/ic_arrow left.svg');
+  background-image: url('@/assets/svg/ic_arrow-left.svg');
   border-radius: 50%;
 }
 
 .carousel-control-next-icon {
   background-color: white;
-  background-image: url('@/assets/svg/ic_arrow Right.svg');
+  background-image: url('@/assets/svg/ic_arrow-right.svg');
   border-radius: 50%;
 }
 
