--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,12 +5,12 @@
 // 登入頁.註冊頁.房型詳細頁.預約房型頁.預約成功頁.
 // 會員頁 / 修改個人資料頁.會員頁 / 訂單列表
 
-
 .header {
   position: fixed;
+  top: 0;
   height: 72px;
-  z-index: 1;
-  
+  z-index: 5;
+
   @include media-breakpoint-up(md) {
     height: 120px;
   }
@@ -19,8 +19,10 @@
     background-color: black;
   }
 
-
-  .row, .col-5, .col-7, .c0l-12{
+  .row,
+  .col-5,
+  .col-7,
+  .c0l-12 {
     height: inherit;
   }
 
@@ -63,23 +65,21 @@
       height: 120px;
       margin: 0 16px 0 0;
       width: 97px;
-      
+
       a {
-        color:$white;
+        color: $white;
         text-decoration: none;
 
         &:hover {
           color: $primary;
         }
       }
-
     }
 
-    & li:last-child{
+    & li:last-child {
       width: 130px;
     }
   }
-
 
   .hamburger {
     display: flex;
@@ -90,19 +90,18 @@
       display: none;
     }
 
-    &-open{
+    &-open {
       color: white;
       margin-top: 12px;
       width: 48px;
       height: 48px;
     }
 
-    &-close{
+    &-close {
       margin-top: 12px;
       width: 48px;
       height: 48px;
     }
-
   }
 
   .mobile-list {
@@ -134,6 +133,5 @@
     li {
       padding: 10px 20px;
     }
-
   }
 }
