--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -52,11 +52,11 @@
 // Utilities
 @import 'node_modules/bootstrap/scss/utilities/api';
 // scss-docs-end import-stack
-@import "./footer";
-@import "./header";
+@import './footer';
+@import './header';
 
 // BookRoom
-@import "./book-room";
+@import './book-room';
 
 h6,
 .h6,
@@ -76,9 +76,11 @@ h1,
 body {
   //    background: $background;
 }
-
+// text
+@import './text';
 // pages
 @import './pages/rooms';
+@import './pages/member';
 
 // bs-custom
 @import './bs-custom/index';
