--- a/src/styles/components/_section-tab.scss
+++ b/src/styles/components/_section-tab.scss
@@ -10,6 +10,8 @@
 }
 .section-tab {
   display: flex;
+  padding-left: 0;
+  margin: 0 -0.75rem;
   &-item {
     position: relative;
     display: inline-flex;
