--- a/src/styles/pages/_member.scss
+++ b/src/styles/pages/_member.scss
@@ -7,14 +7,14 @@
   .hero-area {
     width: 100%;
     height: 206px;
+    display: flex;
+    justify-content: center;
     @include media-breakpoint-up(md) {
       height: 384px;
     }
     background: url('@/assets/png/bg_hero.png') center center / cover no-repeat;
     &-wrapper {
-      max-width: 1320px;
-      padding: 0 40px;
-      margin: 0 auto;
+      margin: 0 -0.75rem;
       height: 100%;
       display: flex;
       flex-direction: column;
@@ -45,7 +45,6 @@
     }
   }
   .tab-area {
-    max-width: 1320px;
     margin: 40px auto;
     @include media-breakpoint-up(md) {
       margin-top: 80px;
