feature: member info basic mode

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -81,6 +81,7 @@ body {
 // pages
 @import './pages/rooms';
 @import './pages/member';
+@import './pages/member-info';
 
 // bs-custom
 @import './bs-custom/index';
