--- a/src/styles/pages/_member.scss
+++ b/src/styles/pages/_member.scss
@@ -1,5 +1,5 @@
 .member {
-  background: $black;
+  background: $background;
   margin-top: 72px;
   @include media-breakpoint-up(md) {
     margin-top: 120px;
@@ -45,10 +45,15 @@
     }
   }
   .tab-area {
-    margin: 40px auto;
+    margin-top: 40px;
     @include media-breakpoint-up(md) {
       margin-top: 80px;
-      margin-bottom: 120px;
+    }
+  }
+  .main-area {
+    margin: 40px 0;
+    @include media-breakpoint-up(md) {
+      margin: 80px 0 120px 0;
     }
   }
 }
