--- a/src/styles/pages/_member-info.scss
+++ b/src/styles/pages/_member-info.scss
@@ -24,7 +24,10 @@
     .card {
       border-radius: 20px;
       background: $white;
-      padding: 40px;
+      padding: 24px;
+      @include media-breakpoint-up(md) {
+        padding: 40px;
+      }
       &-title {
         @include tw-text-h5();
         margin-bottom: 40px;
@@ -39,6 +42,10 @@
         }
         &-value {
           @include tw-text-title();
+          &.form-control,
+          &.form-select {
+            border: 1px solid $neutral-40;
+          }
           .password-node-wrapper {
             display: flex;
             padding: 8px 0;
@@ -52,6 +59,18 @@
             }
           }
         }
+        &-input_wrapper {
+          display: flex;
+          margin: 0 -10px;
+          margin-bottom: 24px;
+          &:last-child {
+            margin-bottom: 0;
+          }
+          .card-item-value {
+            flex: 1;
+            margin: 0 8px;
+          }
+        }
         .prefix-item {
           position: absolute;
           top: 50%;
@@ -59,6 +78,7 @@
           transform: translateY(-50%);
           color: $primary-100;
           text-decoration: underline;
+          cursor: pointer;
         }
         .btn {
           width: auto;
