--- a/src/styles/pages/_member.scss
+++ b/src/styles/pages/_member.scss
@@ -1,8 +1,8 @@
 .member {
   background: $background;
-  margin-top: 72px;
+  padding-top: 72px;
   @include media-breakpoint-up(md) {
-    margin-top: 120px;
+    padding-top: 120px;
   }
   .hero-area {
     width: 100%;
