feat: add room/:id page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -81,6 +81,10 @@ body {
 @import './pages/rooms';
 @import './pages/member';
 @import './pages/member-info';
+@import './pages/room';
+
+// components
+@import './components/room-info';
 
 /* BookRoom */
 @import "./pages/book-room";
