--- a/src/styles/pages/_room.scss
+++ b/src/styles/pages/_room.scss
@@ -1,9 +1,9 @@
 .room {
   background-color: $primary-40;
-  
 
   .room-header {
     position: relative;
+    z-index: 0;
 
     .readmore {
       position: absolute;
@@ -49,9 +49,8 @@
   }
 
   .room-card {
-
     margin-bottom: 40px;
-    
+
     .card-body {
       padding: 40px;
     }
@@ -71,10 +70,6 @@
       margin-bottom: 40px;
     }
 
-    &__range {
-      margin-bottom: 16px;
-    }
-
     &__people {
       display: flex;
       justify-content: space-between;
@@ -88,5 +83,24 @@
       font-weight: 700;
       margin-bottom: 40px;
     }
+  }
+}
+
+.room-card {
+  &__range {
+    margin-bottom: 16px;
+  }
+
+  &__dates {
+    display: flex;
+    gap: 8px;
+  }
+
+  &__date {
+    flex-grow: 1;
+    padding: 16px;
+    border-radius: 8px;
+    border: 1px solid var(--Neutral-100, #000);
+    background: var(--Neutral-0, #fff);
   }
 }
