--- a/src/styles/_dialog-msg.scss
+++ b/src/styles/_dialog-msg.scss
@@ -2,6 +2,8 @@
     position: fixed;
     top: 0;
     bottom: 0;
+    left:0;
+    right:0;
     background: rgba(0,0,0,0.5);
     backdrop-filter: blur(5px);
     z-index: 9;
@@ -18,6 +20,7 @@
     align-items: center;
     flex-direction: column;
     border-radius: 20px;
+    border: none;
  
     @include media-breakpoint-up(md) {
       width: 55%;
