--- a/src/styles/pages/_book-room.scss
+++ b/src/styles/pages/_book-room.scss
@@ -133,6 +133,8 @@
     .btn-edit{
       text-decoration: underline;
       text-decoration-color: $balck;
+      background: none;
+      border: none;
     }
     &__box {
       display: flex;
@@ -172,6 +174,8 @@
       color: $primary-100;
       text-decoration: underline;
       text-decoration-color: $primary-100;
+      background: none;
+      border: none;
     }
   
     &__box{
